--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <!-- Шапка -->
     <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-        <div class="container-xxl">
-            <a class="navbar__logo col-auto" href="index.html">
-                <img src="img/resoschool_logo_green.svg" alt="Логотип зеленный">
+        <div class="container-xxl navbar__container">
+            <a class="navbar__logo col-auto" href="/">
+                <img src="img/resoschool_logo_green.svg" alt="">
             </a>
             <button class="navbar-toggler navbar__toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="navbar__line"></div>
@@ -23,14 +23,14 @@
             </button>
             <div class="navbar__collapse collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar__links navbar-nav me-auto mb-2 mb-lg-0">
-                    <a class="navbar__item" href="#">О школе</a>
-                    <a class="navbar__item" href="#">Команда</a>
-                    <a class="navbar__item active" href="#">Расписание</a>
-                    <a class="navbar__item" href="#">Контакты</a>
+                    <a class="navbar__item" href="/about/">О школе</a>
+                    <a class="navbar__item" href="/team/">Команда</a>
+                    <a class="navbar__item active" href="/shedule/">Расписание</a>
+                    <a class="navbar__item" href="/contacts/">Контакты</a>
                 </div>
                 <a class="navbar__phone col-auto me-auto" href="tel:78124496110">+7 (812) 449-61-10</a>
-                <form class="navbar__search d-flex">
-                    <input type="text" placeholder="Поиск по сайту" class="col">
+                <form class="navbar__search d-flex" action="/search/">
+                    <input type="text" name="q" placeholder="Поиск по сайту" class="col">
                     <button type="submit" class="col-auto">
                         <img src="img/loopa.svg" alt="Поиск по сайту">
                     </button>
